# td-gammon

./: .gitignore  Cargo.toml
src/: dicegen.rs  duel.rs  fstate.rs  inputs.rs  lib.rs  model.rs  probabilities.rs  train.rs
src/evaluator/: evaluator.rs  hyper.rs  mod.rs  pubeval.rs
